--- a/style.css
+++ b/style.css
@@ -15,9 +15,11 @@ body{
     border-radius: 5px;
     width: 300px;
     height: 300px;
+    transition: all 0.4s;
 }
 
 .box:hover{
     background-color: aqua;
     color: blueviolet;
+    transform: scale(1.2);
 }
