--- a/style.css
+++ b/style.css
@@ -13,13 +13,27 @@ body{
     padding: 10px;
     border: 1px solid salmon;
     border-radius: 5px;
-    width: 300px;
+    width: 10px;
     height: 300px;
     transition: all 0.4s;
 }
-
-.box:hover{
-    background-color: aqua;
-    color: blueviolet;
-    transform: scale(1.2);
+div h2{
+    height: 10px;
+    width: 10px;
+    
 }
+
+
+/** 
+ .box {
+        width: 100px;
+        height: 100px;
+        background-color: teal;
+        margin: 10px;
+        display: inline-block;
+        text-align: center;
+        line-height: 100px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+/
