--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body{
 }
 
 .box{
-    margin: 10px;
+    margin: 5px;
     padding: 10px;
     border: 1px solid salmon;
-    border-radius: 5px;
+    border-radius: 15px;
     width: 10px;
     height: 300px;
     transition: all 0.4s;
@@ -20,7 +20,28 @@ body{
 div h2{
     height: 10px;
     width: 10px;
+    color: white;
+}
+
+#box1{
     
+    background-image: url("src/paisajes1.jpg");
+}
+
+#box2{
+    background-image: url("src/paisaje2.jpg");
+}
+
+#box3{
+    background-image: url("src/paisaje3.jpg");
+}
+
+#box4{
+    background-image: url("src/paisajes4.jpg");
+}
+
+#box5{
+    background-image: url("src/paisajes5.jpg");
 }
 
 
