--- a/style.css
+++ b/style.css
@@ -17,11 +17,28 @@ body{
     height: 300px;
     transition: all 0.4s;
 }
+
+.boxActivo{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 300px;
+    height: 300px;
+    transition: all 0.4s;
+    background-color: black;
+}
+
 div h2{
     height: 10px;
     width: 10px;
     color: white;
 }
+
+.box:hover{
+transform: scale(1.2);
+}
+
 
 #box1{
     
@@ -43,6 +60,7 @@ div h2{
 #box5{
     background-image: url("src/paisajes5.jpg");
 }
+
 
 
 /** 
