--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     padding: 10px;
     border: 1px solid salmon;
     border-radius: 15px;
-    width: 10px;
-    height: 300px;
+    width: 2%;
+    height: 50%;
     transition: all 0.4s;
 }
 
@@ -23,8 +23,8 @@ body{
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
-    width: 300px;
-    height: 300px;
+    width: 50%;
+    height: 50%;
     transition: all 0.4s;
     background-color: black;
 }
